v4.2.5 (2017-xx-xx)
---------------------------
* added ArangoCollectionAsync.exists()
* added ArangoDatabaseAsync.exists()

v4.2.4 (2017-09-04)
---------------------------
* fixed ArangoDatabaseAsync.transaction(): ignore null result
* added properties validation arangodb.host
* added ArangoCollectionAsync.ensure<IndexType>Index()
* made ArangoCollectionAsync.create<IndexType>Index() deprecated
* let ArangoCursor implement Iterable
* fixed issue #145: ArangoCollectionAsync.updateDocument()
* fixed issue #145: ArangoVertexCollectionAsync.updateVertex()
* fixed issue #145: ArangoEdgeCollectionAsync.updateEdge()

v4.2.3 (2017-07-31)
---------------------------
* added ArangoDatabaseAsync.getPermissions(String)
* added ArangoCollectionAsync.getPermissions(String)
* added ArangoDBAsync.grantDefaultDatabaseAccess(String, Permissions)
* added ArangoDBAsync.grantDefaultCollectionAccess(String, Permissions)
* added ArangoDatabaseAsync.grantDefaultCollectionAccess(String, Permissions)
* fixed DateUtil (thread-safe)

v4.2.2 (2017-07-20)
---------------------------
* added ArangoDatabaseAsync.grantAccess(String, Permissions)
* added ArangoCollectionAsync.grantAccess(String, Permissions)
* added ArangoDatabaseAsync.resetAccess(String)
* added ArangoCollectionAsync.resetAccess(String)
* added ArangoDBAsync.updateUserDefaultDatabaseAccess(String, Permissions)
* added ArangoDBAsync.updateUserDefaultCollectionAccess(String, Permissions)
* added ArangoDatabaseAsync.updateUserDefaultCollectionAccess(String, Permissions)
* added ArangoCollectionAsync.getDocuments(Collection<String>, Class)
* added connection/handshake retry on same host
* added deduplicate field for hash/skiplist index

v4.2.1 (2017-06-20)
---------------------------
* fixed deserializing of internal field _id

v4.2.0 (2017-06-14)
---------------------------
* added ArangoDBVersion.getLicense()
* added ArangoDB.getRole()
* added ArangoDBException.getException()
* updated velocypack-module-jdk8